--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body {
 }
 
 .login{
+    display: flex;
     justify-content: center; 
     margin-top: 15%;
     width: 67%;
@@ -69,7 +70,7 @@ body {
     display: flex;
     z-index: 1;
     top: 21%;
-    left: 18%;
+    left: 22%;
     height: 60%;
     filter: drop-shadow(10px 7px 10px rgb(121, 120, 120));
 }
@@ -90,7 +91,7 @@ body {
     position: relative;
     display: flex;
     top: -7%;
-    left: 27%;
+    left: 45%;
     width: 20%;
     font-size: 70%;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -99,7 +100,7 @@ body {
 .registro{
     position: relative;
     top: -8%;
-    left: 28%;
+    left: 45%;
     background-color: #6d0ca1; 
     color: #ffffff;
     font-size: 70%;
@@ -116,15 +117,16 @@ body {
 }
 
 form{
-    margin-bottom: 5%;
-    margin-top: 10%;
+    position: relative;
+    width: 50%;
+    top: 10%;
+    left:-20%;
     display:flexbox;
-    max-width: 60%; 
-    margin-left: -35%;
+    max-width: 500px; 
 }
 
 input{
-    align-items: center;
+    
     background-color: #e6e3e3; 
     font-size: 12px;
     border: none; 
@@ -137,7 +139,6 @@ input{
 
 
 .submit{
-    text-align: center;
     width: 100%;
     padding: 4%; 
     border: none; 
